<resources>
    <string name="app_name">MyCoolApp</string>
    <string name="random_icon_generator">Random Icon Generator</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="what_is_your_nickname">What is your NickName?</string>
    <string name="add_your_info">Add Your Info:</string>
    <string name="what_is_your_name">What is your Name?</string>
    <string name="done">Done</string>
    <string name="personal_information">Personal Information:</string>
    <string name="random_boxes">Random Boxes</string>
    <string name="questions1">What is the capital city of Italy? </string>
    <string name="rome">Rome</string>
    <string name="milan">Milan</string>
    <string name="torino">Torino</string>
    <string name="florence">Florence</string>
    <string name="submit">Submit</string>
    <string name="congratulations">Congratulations!</string>
    <string name="game_lost">Game Lost ;(</string>
    <string name="play">Play</string>
    <string name="millionare_game_title">Let\'s become a Millionare.</string>
    <string name="incorrect_answer">Incorrect Answer:</string>
    <string name="answer">Answer</string>
    <string name="correct_answer">Correct Answer:</string>
    <string name="share_success_text">Share Success </string>
    <string name="dummy_text">Lorem ipsum dolor sit amet, consectetur adipisci elit, sed do eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrum exercitationem ullamco laboriosam, nisi ut aliquid ex ea commodi consequatur. Duis aute irure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="rules">Rules</string>
    <string name="select_amount">Select Amount To Play For:</string>
    <string name="amount">Amount:</string>
    <string name="title_tutorials">Tutorials</string>
</resources>